# service

./: MANIFEST.in  README.md  conftest.py  pyproject.toml  requirements.txt  service.default.conf  service.sublime-project  setup.py
.github/workflows/: publish.yml  release.yml  style.yml  tests.yml
service/: __init__.py  cli.py  core.py  launchctl.py  log.py  service.py
tests/: test_cli.py  test_launchctl.py  test_service.py
